Created the basic website structure

--- a/index.html
+++ b/index.html
@@ -18,6 +18,8 @@
     </p>
     <div class="links">
       <div><a href="/index.html">Homepage</a></div>
+      <div><a href="/photo.html">Photo</a></div>
+      <div><a href="/contact.html">Contact</a></div>
     </div>
   </body>
 </html>
