--- a/photo.html
+++ b/photo.html
@@ -4,7 +4,16 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Photo</title>
+    <link rel="stylesheet" href="/src/styles.css" />
   </head>
-  <body></body>
+  <body>
+    <h1>🥐 A picture of a croissant</h1>
+    <img src="/src/fresh-croissant.jpeg" alt="" />
+    <div class="links">
+      <div><a href="/index.html">Homepage</a></div>
+      <div><a href="/photo.html">Photo</a></div>
+      <div><a href="/contact.html">Contact</a></div>
+    </div>
+  </body>
 </html>
