--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       layered, flaky textured roll, more like puff pastry.
     </p>
     <div class="links">
-      <div><a href="/index.html">Homepage</a></div>
+      <div><a href="/">Homepage</a></div>
       <div><a href="/photo.html">Photo</a></div>
       <div><a href="/contact.html">Contact</a></div>
     </div>
