--- a/contact.html
+++ b/contact.html
@@ -11,10 +11,13 @@
     <h1>🥐 Contact us</h1>
     <p>
       To contact croissant.com, please email us at
-      <a href="mailto:info@croissant.com">info@croissant.com</a> for more info
+      <a href="mailto:info@croissant.com" class="blue-link"
+        >info@croissant.com</a
+      >
+      for more info
     </p>
     <div class="links">
-      <div><a href="/index.html">Homepage</a></div>
+      <div><a href="/">Homepage</a></div>
       <div><a href="/photo.html">Photo</a></div>
       <div><a href="/contact.html">Contact</a></div>
     </div>
