--- a/photo.html
+++ b/photo.html
@@ -11,7 +11,7 @@
     <h1>🥐 A picture of a croissant</h1>
     <img src="/src/fresh-croissant.jpeg" alt="" />
     <div class="links">
-      <div><a href="/index.html">Homepage</a></div>
+      <div><a href="/">Homepage</a></div>
       <div><a href="/photo.html">Photo</a></div>
       <div><a href="/contact.html">Contact</a></div>
     </div>
