--- a/contact.html
+++ b/contact.html
@@ -4,7 +4,11 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Contact us</title>
+    <meta
+      name="description"
+      content="Contact the world's leading manufacturer of delicious croissants - Yummy Croissants"
+    />
+    <title>Contact us: Yummy Croissants</title>
     <link rel="stylesheet" href="/src/styles.css" />
   </head>
   <body>
@@ -17,9 +21,13 @@
       for more info
     </p>
     <div class="links">
-      <div><a href="/">Homepage</a></div>
-      <div><a href="/photo.html">Photo</a></div>
-      <div><a href="/contact.html">Contact</a></div>
+      <div><a href="/" title="Yummy Croissants">Homepage</a></div>
+      <div><a href="/photo.html" title="Fresh Crunchy Croissant">Photo</a></div>
+      <div>
+        <a href="/contact.html" title="Manufacturer of delicious croissant"
+          >Contact</a
+        >
+      </div>
     </div>
   </body>
 </html>
