--- a/index.html
+++ b/index.html
@@ -4,7 +4,12 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Homepage</title>
+    <meta
+      name="description"
+      content="The world's yummiest croissants - Yummy Croissants"
+    />
+
+    <title>Yummy croissants: Homepage</title>
     <link rel="stylesheet" href="/src/styles.css" />
   </head>
   <body>
@@ -17,9 +22,13 @@
       layered, flaky textured roll, more like puff pastry.
     </p>
     <div class="links">
-      <div><a href="/">Homepage</a></div>
-      <div><a href="/photo.html">Photo</a></div>
-      <div><a href="/contact.html">Contact</a></div>
+      <div><a href="/" title="Yummy Croissants">Homepage</a></div>
+      <div><a href="/photo.html" title="Fresh Crunchy Croissant">Photo</a></div>
+      <div>
+        <a href="/contact.html" title="Manufacturer of delicious croissant"
+          >Contact</a
+        >
+      </div>
     </div>
   </body>
 </html>
