--- a/photo.html
+++ b/photo.html
@@ -4,16 +4,20 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Photo</title>
+    <title>Croissant Photo: Yummy Croissants</title>
     <link rel="stylesheet" href="/src/styles.css" />
   </head>
   <body>
     <h1>🥐 A picture of a croissant</h1>
-    <img src="/src/fresh-croissant.jpeg" alt="" />
+    <img src="/src/fresh-croissant.jpeg" alt="Fresh Crunchy Croissant" />
     <div class="links">
-      <div><a href="/">Homepage</a></div>
-      <div><a href="/photo.html">Photo</a></div>
-      <div><a href="/contact.html">Contact</a></div>
+      <div><a href="/" title="Yummy Croissants">Homepage</a></div>
+      <div><a href="/photo.html" title="Fresh Crunchy Croissant">Photo</a></div>
+      <div>
+        <a href="/contact.html" title="Manufacturer of delicious croissant"
+          >Contact</a
+        >
+      </div>
     </div>
   </body>
 </html>
